Date	Added

01/31
        * Fixed a typo in Pressure causing it to deduct sp from the caster, and remove
          its sp_rate requirement [celest]
        * Updated skill_range_leniency code when casting a ground targetting spell      
          ( as in Revision 968) [celest]
        * Added Karma and Manner to const.txt
          -- To change a player's alignment to more Good/Evil in scripting for example,
             use:
                 set Karma, Karma + <number here>;

             In older exe's (11-08 or older) you can actually check your karma in the
             character alignment screen (alt-A)
             The rest is up to your scripting creativity ^^

        * Delete players' ID from id_db when kicking everyone from the map-server due
          to char disconnection -- Fixes an odd crash with lazy mob AI [celest]
	* Added at(@) command @autoloot, which turns autoloot on or off for the
	  player who uses it [Upa-Kun]
01/29
	* Fixed Storage Bug with Named Stackable items. Thanks to Nimion [Lupus]
		e.g. Arrows, Iron, Elemental stones, etc...
        * Added a crash check to Safety Wall, thanks to LebrEf[TaVu] / Freya for
          pointing it out [celest]
        * Added some optimisations in clif_parse_MapMove, by Ilpalazzo-sama [celest]

01/28
        * Fixed a typo that was causing /in to always report failure even when the
          name was removed from the ignore list [celest]
        * Link "wisexin", "wisexlist" and "wisall" to the PM ignore functions, and
         "friendslistadd" and "friendslistremove" to the friends list functions
          when parsing the packet DB [celest]
        * added clif_parse_PMIgnoreList (packet 0xd3) from jA [celest]
        * Added DUMP_ALL_PACKETS and moved dump packets code in clif_parse a bit to
          support it [celest]
        * Added base code for Party Item Sharing -- still needs some work in client-
          server support [celest]
	* new GC link http://amber.stormbirds.org/~joshs/gc6.4.tar.gz