@@ -1,4 +1,9 @@
 Date	Added
+02/02
+        * Added crash check for Ice Wall [celest]
+        * Added some optimisations by Ilpalazzo-sama [celest]
+          - reduce mob_data->size variable to 1 bytes
+          - change from if-else to switch statements in buildin_strmobinfo
 
 01/31
         * Fixed a typo in Pressure causing it to deduct sp from the caster, and remove
